# magic-tg-card-generator

./: .coveragerc  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cleanup_cards.py  create_new_card.py  examples.sh  generate_card.py  generate_card_from_prompt.py  generate_image.py  generate_unified.py  mtg_deck_builder.py  mtg_deck_builder_backup.py  mtg_xml_parser.py  pyproject.toml
configs/: README.md  dragon_default.json  standard_commander.yaml
configs/image_generation/: README.md  config.json  config.yml  default_image.json  fast_preview.json  high_quality.json
docs/: CARD_GENERATION_GUIDE.md  CREATE_CARDS.md  CardGenerationController_Architecture.md  DECK_YAML_FORMAT_DE.md  ISSUE_43_IMPLEMENTATION_STATUS.md  UNIFIED_GENERATOR.md  USAGE.md  XML_IMPORT_EXPORT_GUIDE.md  value_objects_implementation.md
examples/: deck_validator_demo.py  generate_image.py  integration_example.py  quick_deck_validator_demo.py  value_objects_demo.py
scripts/deck_tools/: fix_deck_format.py  validate_deck_format.py
src/: __init__.py  test_managers.py
src/ai_services/: __init__.py  ai_worker.py  art_description_generator.py  base_ai_service.py  card_generator.py  theme_analyzer.py
src/domain/: __init__.py  test_domain.py
src/domain/enums/: __init__.py  rarity.py
src/domain/models/: __init__.py  card_collection.py  mtg_card.py
src/domain/value_objects/: __init__.py  card_colors.py  mana_cost.py
src/magic_tg_card_generator/: __init__.py  __main__.py  api_generator.py  cli.py  config.py  core.py  flux_handler.py  flux_wrapper.py  generate_hybrid.py  generate_image.py  image_generator.py  models.py
src/managers/: __init__.py  card_crud_manager.py  card_file_operations.py  card_filter_manager.py  card_generation_controller.py  card_status_manager.py  card_table_manager.py  card_validation_manager.py
src/services/: __init__.py
src/services/ai/: __init__.py  ai_service.py  ai_worker.py  prompt_builder.py
src/services/deck/: README.md  __init__.py  deck_builder_service.py  deck_statistics.py  deck_validator.py
src/tabs/: __init__.py
src/ui/: __init__.py
src/ui/tabs/: __init__.py  theme_config_tab.py
src/ui/widgets/: __init__.py  batch_operations_widget.py  card_filter_bar.py  card_toolbar.py  color_selector.py  deck_stats_panel.py  theme_input.py
src/workers/: __init__.py
tests/: DECK_SERVICES_INTEGRATION_REPORT.md  __init__.py  conftest.py  integration_test_deck_services.py  practical_deck_integration_demo.py  test_card_file_operations.py  test_card_table_manager.py  test_card_toolbar.py  test_card_validation_manager.py  test_cli.py  test_cli_functional.py  test_config_functional.py  test_controller_integration.py  test_core.py  test_core_functional.py  test_deck_services.py  test_file_operations.py  test_filtering_search.py  test_full_coverage.py  test_generate_image.py  test_generation_workflows.py  test_image_generator.py  test_image_generator_functional.py  test_integration.py  test_models.py  test_models_functional.py  test_mtg_deck_builder.py  test_quick_coverage.py  test_refactored_managers.py  test_ui_interactions.py  test_unified_card_generator_validation.py
tests/domain/: conftest.py
tests/managers/: test_card_crud_manager.py  test_card_generation_controller.py
(+7 files in other folders)
